--- a/New_Quiz_App/templates/New_Quiz_App_2.html
+++ b/New_Quiz_App/templates/New_Quiz_App_2.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %} New-Quiz-Page {% endblock %}
+{% block title %} New-Quiz-Page-2 {% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('New_Quiz.static', filename='css/New_Quiz_App.css') }}">
-<script src="{{ url_for('New_Quiz.static', filename='js/New_Quiz_App.js') }}"></script>
+<link rel="stylesheet" href="{{ url_for('New_Quiz.static', filename='css/New_Quiz_App_2.css') }}">
+<script src="{{ url_for('New_Quiz.static', filename='js/New_Quiz_App_2.js') }}"></script>
 {% endblock %}
 
 
@@ -24,30 +24,14 @@
                 <p>Заповнити бланк</p>
             </button>
         </div>
-
         <div class="new-quiz-content">
             <div class="fill-form-frame">
-                    <input type="text" placeholder="Напишіть запитання:">
+                <input type="text" placeholder="Напишіть запитання:">
             </div>
-
-            <div class="answers-options-frame">
-                <button class="answers-options-frame-blue">
-
-                </button>
-            
-                <button class="answers-options-frame-green">
-
-                </button>
-            
-                <button class="answers-options-frame-yellow">
-
-                </button>
-            
-                <button class="answers-options-frame-red">
-
-                </button>
+            <div class="fill-form-frame-2">
+                <input type="text" placeholder="Напишіть запитання:">
+                <button class="enter-btn">Enter</button>
             </div>
-            
         </div>
     </div>
 </div>
