--- a/history/templates/history.html
+++ b/history/templates/history.html
@@ -1,10 +1,26 @@
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        
-    </body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %} Quizzes history {% endblock %}
+
+{% block head %} <link rel="stylesheet" href="{{ url_for('history.static', filename='css/history.css') }}">{% endblock %}
+
+{% block main %} 
+ <!-- Design -->
+
+    <header></header>
+    <div class="section">
+        <div class="title-div">
+            <var class="title-var">Complete Quizzes</var>
+        </div>
+        <div class="div-content">
+            <div class="quiz-frame">
+                <img class="quiz-img"></img>
+                <div class="quiz_correct-frame"></div>
+                <var class="quiz-var"></var>
+            </div>
+        </div>
+    </div>
+    
+
+
+{% endblock %}
