--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -35,7 +35,9 @@
         </header>
 
         <main>
-            {% block main %} {% endblock %}
+            {% block main %} 
+            {% endblock %}
+
         </main>
         
         <footer>
