--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -2,8 +2,32 @@
 
 {% block title %} Registration page {% endblock %}
 
-{% block head %} <link rel="stylesheet" href="{{ url_for('registration.static', filename='css/registration.css') }}">{% endblock %}
+{% block head %} 
+<link rel="stylesheet" href="{{ url_for('registration.static', filename='css/registration.css') }}">
+{% endblock %}
 
-{% block main %} 
+{% block main %}
+<main class="page">
+    <div class="registration-box">
+        <h2>Registration</h2>
+        <form method="post">
+            <label for="login">Login:</label>
+            <input type="text" id="login" name="login" class="input-field">
 
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" class="input-field">
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" class="input-field">
+
+            <label for="confirm">Password Confirm:</label>
+            <input type="password" id="confirm" name="confirm" class="input-field">
+
+            <small><a href="/login">Already registered? Go to authorization</a></small>
+            
+            <br><br>
+            <button type="submit" class="submit-btn">Submit</button>
+        </form>
+    </div>
+</main>
 {% endblock %}
