--- a/authorization/templates/authorization.html
+++ b/authorization/templates/authorization.html
@@ -15,7 +15,7 @@
     <input type="text" class ="username" placeholder="Username" required>
     <input type="password" class ="password" placeholder="Password" required>  
     <input type="password confirm " class="password-confirm" placeholder="Password-confirm" required>
-    <p class = "text">Not registered yet? <a href="/login" >Go to registration!</a></p>
+    <p class = "text">Not registered yet? <a href="/registration" >Go to registration!</a></p>
     <button class = "button">Submit</button>   
 </div>
 {% endblock %}
