--- a/authorization/static/css/authorization.css
+++ b/authorization/static/css/authorization.css
@@ -1,12 +1,19 @@
-.body {
-    height: 100%;
-    margin: 200px;
+body {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+    
+
+}
+main {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff;
+    flex-direction: column;
+    height : 100vh;
+    width: 100vw
     
-
 }
 .login-window{
     display: flex;
@@ -27,10 +34,13 @@
 
     width: 210px;
     height: 48px;
-    border: 1px solid #000000;
-    border-radius: 5px;     
-    background-color: #FBEAD7;
+    border: 0px solid ;
+    border-radius: 10px;     
+    background-color: #2382FF;
     font-size: 18px;
+    color: white;
+    box-shadow: 0px 5px 10px 5px rgb(0 0 0 / 10%);
+    font-weight: bold ;
 }
 
 .username{
@@ -38,34 +48,44 @@
     height: 45px;
     border: 1px solid #000000;
     border-radius: 10px;
+    background: none ;
+    padding: 0 0 0 10px;
 }
 .password{
     width: 420px;
     height: 45px;
     border: 1px solid #000000;
     border-radius: 10px;
+    background: none ;
+    padding: 0 0 0 10px;
 }
 .password-confirm{
     width: 420px;
     height: 45px;
     border: 1px solid #000000;
     border-radius: 10px;
+    background: none ;
+    padding: 0 0 0 10px;
 }
 a{
     text-decoration: underline;
-    color: #d6872c;
     font-size: 14px;
     font-weight: normal;
     font-family: 'Quicksand';
     text-align: center;
+    background: none ;
+    color: #929292 ;
+    
 
 }
 .text{
     font-size: 14px;
     font-weight: normal;
     font-family: "Quicksand";
-    color: #d6872c;
+    color: #929292;
     text-align: center;
+    background: none ;
+
 }
 .title{
     font-size: 30px;
@@ -73,4 +93,5 @@ a{
     font-family: "Quicksand";
     color: #000000;
     text-align: center;
+    background: none ;
 }
