--- a/authorization/static/css/authorization.css
+++ b/authorization/static/css/authorization.css
@@ -23,9 +23,8 @@ main {
     padding: 20px;
     width: 580.25px;
     height: 537.81px;
-    border: 1px solid #000000;
+    border: 2px solid #000000;
     border-radius: 20px;
-    background-color: #ffffff;
     gap: 30px;
 
 
@@ -41,6 +40,7 @@ main {
     color: white;
     box-shadow: 0px 5px 10px 5px rgb(0 0 0 / 10%);
     font-weight: bold ;
+    cursor: pointer;
 }
 
 .username{
@@ -94,4 +94,23 @@ a{
     color: #000000;
     text-align: center;
     background: none ;
+}
+.text-up-input{
+    font-size: 16px;
+    font-weight: medium;
+    font-family: "Quicksand";
+    color: #000000;
+    background: none ;
+    font-weight: 500;
+    padding: 0 0 3 0 ;
+}
+
+
+.text-div{
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+
+
 }
