--- a/authorization/templates/authorization.html
+++ b/authorization/templates/authorization.html
@@ -11,10 +11,18 @@
 {% block main %} 
 <div class = "login-window">    
     <h1 class = "title">Authorization</h1>
-    <!-- <p>Username</p> -->
-    <input type="text" class ="username" placeholder="Username" required>
-    <input type="password" class ="password" placeholder="Password" required>  
-    <input type="password confirm " class="password-confirm" placeholder="Password-confirm" required>
+    <div class = "text-div">
+        <p  class = "text-up-input">Username:</p>
+        <input type="text" class ="username" placeholder="" required>
+    </div>
+    <div class = "text-div">
+        <p class = "text-up-input">Password:</p>
+        <input type="password" class ="password" placeholder="" required>
+    </div>  
+    <div class = "text-div">
+        <p class = "text-up-input">Password Confirm:</p>
+        <input type="password confirm " class="password-confirm" placeholder="" required>
+    </div>
     <p class = "text">Not registered yet? <a href="/registration" >Go to registration!</a></p>
     <button class = "button">Submit</button>   
 </div>
