--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -11,20 +11,27 @@
     <div class="registration-box">
         <h2>Registration</h2>
         <form method="post">
-            <label for="login">Login:</label>
-            <input type="text" id="login" name="login" class="input-field">
+            <div class='input-pass'>
+                <label for="login">Login:</label>
+                <input type="text" id="login" name="login" class="input-field">
+            </div>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" class="input-field">
+            <div class='input-pass'>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" class="input-field">
+            </div>
 
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" class="input-field">
+            <div class='input-pass'>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" class="input-field">
+            </div>
 
-            <label for="confirm">Password Confirm:</label>
-            <input type="password" id="confirm" name="confirm" class="input-field">
+            <div class='input-pass'> 
+                <label for="confirm">Password Confirm:</label>
+                <input type="password" id="confirm" name="confirm" class="input-field">
+            </div>
 
-            <small><a href="/login">Already registered? Go to authorization</a></small>
-            
+            <small><a>Already registered? </a><a href="/login" class=" input">Go to authorization</a></small>
             <br><br>
             <button type="submit" class="submit-btn">Submit</button>
         </form>
