--- a/New_Quiz_App/templates/New_Quiz_Settings.html
+++ b/New_Quiz_App/templates/New_Quiz_Settings.html
@@ -32,7 +32,7 @@
                     <div class="image-upload">
                         <input type="file" id="image" name="image" accept="image/*" hidden>
                         <div class="upload-area" onclick="document.getElementById('image').click()">
-                            <img src="{{ url_for('New_Quiz.static', filename='img/Cloud-Icon.svg') }}" alt="Cloud-Logo">
+                            <img src="{{ url_for('New_Quiz.static', filename='img/Cloud-Icon.png') }}" alt="Cloud-Logo">
                             <p>Drop files or click here</p>
                         </div>
                     </div>
