pre final edits

--- a/authorization/static/css/authorization.css
+++ b/authorization/static/css/authorization.css
@@ -24,7 +24,7 @@ main {
     width: 580.25px;
     height: 537.81px;
     border: 2px solid #000000;
-    border-radius: 20px;
+    border-radius: 30px;
     gap: 30px;
 
 
@@ -76,7 +76,6 @@ a{
     background: none ;
     color: #929292 ;
     
-
 }
 .text{
     font-size: 14px;
@@ -89,7 +88,7 @@ a{
 }
 .title{
     font-size: 30px;
-    font-weight: normal;
+    font-weight: bold;
     font-family: "Quicksand";
     color: #000000;
     text-align: center;
