--- a/authorization/templates/authorization.html
+++ b/authorization/templates/authorization.html
@@ -12,7 +12,7 @@
 <div class = "login-window">    
     <h1 class = "title">Authorization</h1>
     <div class = "text-div">
-        <p  class = "text-up-input">Username:</p>
+        <p  class = "text-up-input">Login:</p>
         <input type="text" class ="username" placeholder="" required>
     </div>
     <div class = "text-div">
