--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -9,7 +9,7 @@
 {% block main %}
 <main class="page">
     <div class="registration-box">
-        <h2>Registration</h2>
+        <h1>Registration</h1>
         <form method="post">
             <div class='input-pass'>
                 <label for="login">Login:</label>
@@ -31,7 +31,7 @@
                 <input type="password" id="confirm" name="confirm" class="input-field">
             </div>
 
-            <small><a>Already registered? </a><a href="/login" class=" input">Go to authorization</a></small>
+            <p class = "text">Already registered? <a href="/registration" >Go to authorization!</a></p>
             <button type="submit" class="submit-btn">Submit</button>
         </form>
     </div>
