--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -27,10 +27,19 @@
             </div>
 
             <div class='input-pass'> 
-                <label for="confirm">Password Confirm:</label>
+                <label for="confirm"> Confirm Password:</label>
                 <input type="password" id="confirm" name="confirm" class="input-field">
             </div>
-
+            <div class="label-text">
+                <label for="login">Student or teacher</label>
+            </div>
+            <div>
+                <label for="Student"> Student</label>
+                <input type="radio" id="Student" name="Teacher" class="choose-btn" placeholder="Student">
+                <label for="Teacher" class="choose-btn"> Teacher</label>
+                <input type="radio" id="Teacher" name="Teacher" class="choose-btn" placeholder="Teacher">
+            </div>
+                
             <small><a>Already registered? </a><a href="/login" class=" input">Go to authorization</a></small>
             <br><br>
             <button type="submit" class="submit-btn">Submit</button>
