--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -34,9 +34,9 @@
                 <label for="login">Student or teacher</label>
             </div>
             <div>
-                <label for="Student"> Student</label>
+                <label for="choose-btn" class="label"> Student</label>
                 <input type="radio" id="Student" name="Teacher" class="choose-btn" placeholder="Student">
-                <label for="Teacher" class="choose-btn"> Teacher</label>
+                <label for="Teacher" class="label"> Teacher</label>
                 <input type="radio" id="Teacher" name="Teacher" class="choose-btn" placeholder="Teacher">
             </div>
                 
