--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -34,10 +34,10 @@
                 <label for="login">Student or teacher</label>
             </div>
             <div>
-                <label for="choose-btn" class="label"> Student</label>
-                <input type="radio" id="Student" name="Teacher" class="choose-btn" placeholder="Student">
+                <label for="Student" class="label"> Student</label>
+                <input type="radio" id="Student" name="Teacher" class="choose-btn">
                 <label for="Teacher" class="label"> Teacher</label>
-                <input type="radio" id="Teacher" name="Teacher" class="choose-btn" placeholder="Teacher">
+                <input type="radio" id="Teacher" name="Teacher" class="choose-btn">
             </div>
                 
             <small><a>Already registered? </a><a href="/login" class=" input">Go to authorization</a></small>
