add login manager

--- a/home_app/templates/home.html
+++ b/home_app/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}  {% endblock %}
+{% block title %} Home Page {% endblock %}
 
 {% block head %} <link rel="stylesheet" href="{{ url_for('home_app.static', filename='css/home.css') }}">{% endblock %}
 
@@ -13,21 +13,21 @@
 <a class="get-started" href="/registration">Get started</a>
 <div class="benefits">
     <div class="benefit tick">
-        <img src="{{ url_for('home_app.static', filename='img/1.png') }}">
+        <img src="{{ url_for('home_app.static', filename='img/tick.png') }}">
         <div class="benefit-text">
             <h4>Easy to Use</h4>
             <p>quickly create and manage your quizzes</p>
         </div>
     </div>
     <div class="benefit topic">
-        <img src="{{ url_for('home_app.static', filename='img/2.png') }}">
+        <img src="{{ url_for('home_app.static', filename='img/diverse-topics.png') }}">
         <div class="benefit-text">
             <h4>Diverse Topics</h4>
             <p>Quizzes avaible on  numerous subjects</p>
         </div>
     </div>
     <div class="benefit star">
-        <img src="{{ url_for('home_app.static', filename='img/3.png') }}">
+        <img src="{{ url_for('home_app.static', filename='img/star.png') }}">
         <div class="benefit-text">
             <h4>Instant Feedback</h4>
             <p>Get your results immeoiately after completing</p>
