--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -31,7 +31,7 @@
         </div>
         <div class="choose-choose">
             <div>
-                <input type="radio" id="Student" name="Teacher" class="choose-btn">
+                <input type="radio" id="Student" name="Teacher" class="choose-btn" checked>
                 <label for="Student" class="label"> Student</label>
             </div>
             <div>
