--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -11,19 +11,19 @@
     <h2>Registration</h2>
     <form method="post">
         <div class='input-pass'>
-            <label for="login">Login:</label>
+            <label for="login" class="input-title">Login:</label>
             <input type="text" id="login" name="login" class="input-field">
         </div>
         <div class='input-pass'>
-            <label for="email">Email:</label>
+            <label for="email" class="input-title">Email:</label>
             <input type="email" id="email" name="email" class="input-field">
         </div>
         <div class='input-pass'>
-            <label for="password">Password:</label>
+            <label for="password" class="input-title">Password:</label>
             <input type="password" id="password" name="password" class="input-field">
         </div>
         <div class='input-pass'> 
-            <label for="confirm"> Confirm Password:</label>
+            <label for="confirm" class="input-title"> Confirm Password:</label>
             <input type="password" id="confirm" name="confirm" class="input-field">
         </div>
         <div class="label-text">
