Working on page styles, released form data transfer

--- a/New_Quiz_App/templates/New_Quiz_App.html
+++ b/New_Quiz_App/templates/New_Quiz_App.html
@@ -23,11 +23,29 @@
                 <img src="{{ url_for('New_Quiz.static', filename='img/Fill-Form.svg') }}" alt="Fill Form">
                 <p>Заповнити бланк</p>
             </button>
+        
+            <div class="scroll-frame">
+                <div>№1 Fill form</div>
+                <div>№2 Large selection</div>
+                <div>№3 Fill form</div>
+                <div>№4 Large selection</div>
+                <div>№5 Fill form</div>
+                <div>№6 Large selection</div>
+                <div>№7 Fill form</div>
+                <div>№8 Large selection</div>
+                <div>№9 Fill form</div>
+                <div>№10 Large selection</div>
+            </div>
+            
         </div>
+        
+
 
         <div class="new-quiz-content">
             <div class="fill-form-frame">
-                    <input type="text" placeholder="Напишіть запитання:">
+                <img class = "ai-icon" src="{{ url_for('New_Quiz.static', filename='img/ai-icon.svg') }}" alt="AI Icon"/>
+                <p class = "ia-label">Generate a question</p>
+                <input type="text" placeholder="Напишіть запитання:">
             </div>
 
             <div class="answers-options-frame">
