--- a/New_Quiz_App/static/css/New_Quiz_App.css
+++ b/New_Quiz_App/static/css/New_Quiz_App.css
@@ -163,3 +163,52 @@ input{
 .answers-options-frame-red {
     background-color: rgba(213, 85, 108, 0.5);
 }
+
+.scroll-frame{
+    display: flex;
+    flex-direction: column;
+    width: 274px;
+    height: 541px;
+    border: 2px solid black; 
+    border-radius: 10px;
+    padding: 21px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    scrollbar-width: none;
+    gap: 10px;
+}
+
+.scroll-frame div {
+    flex-shrink: 0; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: left;
+    width: 232px;
+    height: 65px;
+    font-size: 20px;
+    color: white;
+    font-family: 'quicksand';
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    font-weight: bold;
+    gap: 15px;
+    padding: 25px;
+    padding-right: 15px;
+    white-space: nowrap; 
+}
+
+.ai-icon {
+    margin-top: 10px;
+    margin-left: 10px;
+    width: 65px;
+    height: 65px;
+}
+
+.ai-label{
+    font-size: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    font-weight: 500;
+    font-family: 'quicksand';
+}
