--- a/New_Quiz_App/static/css/New_Quiz_App.css
+++ b/New_Quiz_App/static/css/New_Quiz_App.css
@@ -1,10 +1,11 @@
-main{
+main {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
 }
-.section{
+
+.section {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -15,7 +16,8 @@ main{
     border: 1px solid;
     border-radius: 20px;
 }
-.title-div{
+
+.title-div {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -26,13 +28,15 @@ main{
     border-bottom: 1px solid;
     background: none;
 }
-.title-p{
+
+.title-p {
     font-size: 34px;
 }
+
 .div-content {
     display: flex;
     flex-direction: row;
-    gap: 12px; 
+    gap: 12px;
     padding: 10px;
     width: 100%;
     height: 840px;
@@ -40,7 +44,7 @@ main{
     background: none;
     overflow: hidden;
 }
-  
+
 .side-bar-content {
     display: flex;
     flex-direction: column;
@@ -48,8 +52,8 @@ main{
     padding: 18px;
     border: 2px solid;
     border-radius: 20px;
-    width: 310px; 
-    height: 100%; 
+    width: 310px;
+    height: 100%;
 }
 
 .new-quiz-content {
@@ -59,11 +63,11 @@ main{
     gap: 20px;
     border: 2px solid;
     border-radius: 20px;
-    flex-grow: 1; 
+    flex-grow: 1;
     width: 100%;
-    height: 100%; 
+    height: 100%;
 }
-  
+
 .big-choice,
 .fill-form {
     display: flex;
@@ -74,15 +78,18 @@ main{
     height: 141px;
     border: 2px solid;
     border-radius: 20px;
-    transition: box-shadow 0.3s ease; 
+    transition: box-shadow 0.3s ease;
 }
 
 .big-choice:hover,
 .fill-form:hover {
-    cursor: pointer; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-.big-choice { box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); }
+
+.big-choice {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
 
 p {
     font-size: 25px;
@@ -90,23 +97,23 @@ p {
     font-family: 'Quicksand', sans-serif;
 }
 
-img{
+img {
     width: 80px;
     height: 80px;
 }
 
-.fill-form-frame{
-    display: flex;
+.fill-form-frame {
+    position: relative;
     width: 100%;
     height: 383px;
     border: 2px solid;
     border-radius: 20px;
+    display: flex;
     justify-content: center;
     align-items: center;
-    
 }
 
-.answers-options-frame{
+.answers-options-frame {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -117,7 +124,7 @@ img{
     padding: 29px;
 }
 
-input{
+.fill-form-frame input {
     width: 450px;
     height: 65px;
     border: 1px solid;
@@ -126,8 +133,14 @@ input{
     font-family: 'Quicksand', sans-serif;
     text-align: center;
     outline: none;
+    color: hsla(0, 0%, 0%, 0.75);
+    background-color: transparent;
+}
+
+.fill-form-frame input::placeholder {
     color: hsla(0, 0%, 0%, 0.25);
 }
+
 .answers-options-frame-blue,
 .answers-options-frame-green,
 .answers-options-frame-yellow,
@@ -136,20 +149,33 @@ input{
     height: 300px;
     border: 2px solid;
     border-radius: 20px;
-    transition: box-shadow 0.2s ease, transform 0.2s ease; 
+    transition: box-shadow 0.2s ease, transform 0.2s ease;
+    font-size: 18px;
+    font-family: 'Quicksand', sans-serif;
+    text-align: center;
+    outline: none;
+    color: hsla(0, 0%, 0%, 0.75);
+    padding: 10px;
+}
+
+.answers-options-frame-blue::placeholder,
+.answers-options-frame-green::placeholder,
+.answers-options-frame-yellow::placeholder,
+.answers-options-frame-red::placeholder {
+    color: hsla(0, 0%, 0%, 0.25);
 }
 
 .answers-options-frame-blue:hover,
 .answers-options-frame-green:hover,
 .answers-options-frame-yellow:hover,
 .answers-options-frame-red:hover {
-    cursor: pointer; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
-    transform: scale(1.05); 
+    cursor: text;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
 }
 
 .answers-options-frame-blue {
-    background-color: rgba(44, 112, 175, 0.5); 
+    background-color: rgba(44, 112, 175, 0.5);
 }
 
 .answers-options-frame-green {
@@ -164,12 +190,12 @@ input{
     background-color: rgba(213, 85, 108, 0.5);
 }
 
-.scroll-frame{
+.scroll-frame {
     display: flex;
     flex-direction: column;
     width: 274px;
     height: 541px;
-    border: 2px solid black; 
+    border: 2px solid black;
     border-radius: 10px;
     padding: 21px;
     overflow-y: auto;
@@ -179,7 +205,7 @@ input{
 }
 
 .scroll-frame div {
-    flex-shrink: 0; 
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -189,26 +215,114 @@ input{
     height: 65px;
     font-size: 20px;
     color: white;
-    font-family: 'quicksand';
+    font-family: 'Quicksand';
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     font-weight: bold;
     gap: 15px;
     padding: 25px;
     padding-right: 15px;
-    white-space: nowrap; 
+    white-space: nowrap;
 }
 
 .ai-icon {
-    margin-top: 10px;
-    margin-left: 10px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
     width: 65px;
     height: 65px;
+    cursor: pointer;
 }
 
-.ai-label{
+.ia-label {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    padding-left: 20px;
     font-size: 20px;
-    background-color: rgba(0, 0, 0, 0.5);
     font-weight: 500;
-    font-family: 'quicksand';
+    font-family: 'Quicksand', sans-serif;
+    padding: 5px 10px;
+    color: rgba(0, 0, 0, 0.5);
+    margin-left: 55px;
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+}
+
+.modal-overlay.active {
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal-content {
+    background-color: #EDEDED;
+    width: 800px;
+    height: 500px;
+    border-radius: 20px;
+    padding: 20px 30px;
+    box-shadow: 0px 5px 10px 5px rgb(0 0 0 / 10%);
+    position: relative;
+    transform: scale(0.7);
+    opacity: 0;
+    transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-overlay.active .modal-content {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.modal-content h1 {
+    position: absolute;
+    left: 90.5px;
+    top: 30px;
+    font-size: 28px;
+    font-family: "Quicksand", sans-serif;
+    color: black;
+    font-weight: 500;
+    text-align: center;
+}
+
+.modal-content .input-ai-promt {
+    width: 450px;
+    height: 65px;
+    text-align: center;
+    border: solid 1px black;
+    border-radius: 10px;
+    background-color: transparent;
+    font-size: 20px;
+    font-family: 'Quicksand', sans-serif;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content .submit-ai-promt-btn {
+    margin-top: 30px;
+    width: 210px;
+    height: 48px;
+    border: 0;
+    border-radius: 10px;
+    background-color: #2382FF;
+    font-size: 18px;
+    color: white;
+    box-shadow: 0px 5px 10px 5px rgb(0 0 0 / 10%);
+    font-weight: bold;
+    cursor: pointer;
 }
