same desing to figma

--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -16,7 +16,7 @@
         </div>
         <div class='input-pass'>
             <label for="email" class="input-title">Email:</label>
-            <input type="email" id="email" name="email" class="input-field">
+            <input type="email" id="email" name="email" class="input-field" placeholder="example@gmail.com">
         </div>
         <div class='input-pass'>
             <label for="password" class="input-title">Password:</label>
@@ -40,7 +40,7 @@
             </div>
         </div>
             
-        <p class="input"><a class="n-underline">Already registered? </a><a href="/login">Go to authorization</a></p>
+        <p><a class="n-underline">Already registered? </a><a href="/login" class="input">Go to authorization</a></p>
         <button type="submit" class="submit-btn">Submit</button>
     </form>
 </div>
